kubernetes/customer-code-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-code-api
  labels:
    app: customer-code-api
spec:
  type: ClusterIP
  selector:
    app: customer-code-api
  ports:
  - port: 80
    targetPort: 5000
